--- a/id-generator-server/pom.xml
+++ b/id-generator-server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>id-generator-parent</artifactId>
-        <groupId>com.jyall</groupId>
+        <groupId>com.self</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -37,14 +37,9 @@
             <groupId>org.codehaus.janino</groupId>
             <artifactId>janino</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>com.jyall</groupId>
-            <artifactId>jackson-tools</artifactId>
-        </dependency>
         <dependency>
             <artifactId>id-generator-common</artifactId>
-            <groupId>com.jyall</groupId>
+            <groupId>com.self</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
