--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.jyall</groupId>
+    <groupId>com.self</groupId>
     <artifactId>id-generator-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -36,11 +36,6 @@
                 <groupId>org.apache.curator</groupId>
                 <artifactId>curator-recipes</artifactId>
                 <version>2.8.0</version>
-            </dependency>
-            <dependency>
-                <groupId>com.jyall</groupId>
-                <artifactId>jackson-tools</artifactId>
-                <version>2.0</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
